    - German, thanks to Sven Joachim <svenjoac@gmx.de> (closes: #521530)

  [ Kees Cook ]
  * Add debian/patches/pam_1.0.4_mindays: backport upstream 1.0.4 fixes
    for MINDAYS-Field regression (closes: #514437).
  * debian/control: add missing misc:Depends for packages that need it.

  [ Sam Hartman ]
  * Remove conflicts information for transitions prior to woody release

 -- Sam Hartman <hartmans@debian.org>  Sat, 30 May 2009 13:47:20 -0400

pam (1.0.1-9) unstable; urgency=low

  * Move the pam module packages to section 'admin'.
  * 027_pam_limits_better_init_allow_explicit_root: defaults need to be
    declared as LIMITS_DEF_DEFAULT instead of LIMITS_DEF_ALL, otherwise
    global limits will fail to be applied.  LP: #314222.

 -- Steve Langasek <vorlon@debian.org>  Fri, 20 Mar 2009 19:48:47 -0700

pam (1.0.1-8) unstable; urgency=low

  * Updated debconf translations:
    - Bulgarian, thanks to Damyan Ivanov <dmn@debian.org> (closes: #518121)
    - Spanish, thanks to Javier Fernandez-Sanguino Peña <jfs@debian.org>
      (closes: #518214)
    - Swedish, thanks to Martin Bagge <brother@bsnet.se> (closes: #518324)
    - Vietnamese, thanks to Clytie Siddall <clytie@riverland.net.au>
      (closes: #518329)
    - Japanese, thanks to Kenshi Muto <kmuto@debian.org> (closes: #518335) 
    - Slovak, thanks to Ivan Masár <helix84@centrum.sk> (closes: #518341)
    - Czech, thanks to Miroslav Kure <kurem@debian.cz> (closes: #518992)
    - Portuguese, thanks to Américo Monteiro <a_monteiro@netcabo.pt>
      (closes: #519204)
    - Galician, thanks to Marce Villarino <mvillarino@users.sourceforge.net>
      (closes: #519447)
    - Romanian, thanks to Eddy Petrișor <eddy.petrisor@gmail.com>
      (closes: #520552)
  * 027_pam_limits_better_init_allow_explicit_root: set the RLIMIT_MEMLOCK
    limit correctly to match the kernel default, which is not RLIM_INFINITY.
    Closes: #472629.

 -- Steve Langasek <vorlon@debian.org>  Fri, 20 Mar 2009 18:15:07 -0700
