@@ -1,5 +1,5 @@
 # deliberate.
-W: libpam-runtime: no-debconf-config
+libpam-runtime: no-debconf-config
 # this warning is just plain crack, there's no reason that using debconf
 # outside of a maintainer script implies an error.
-W: libpam-runtime: debconf-is-not-a-registry ./usr/sbin/pam-auth-update
+libpam-runtime: debconf-is-not-a-registry usr/sbin/pam-auth-update
