@@ -99,6 +99,10 @@ binary-indep: install
 	dh_installdebconf -i
 	dh_installchangelogs -i $(BUILD_TREE)/ChangeLog
 	dh_compress -i -X.html
+	for pkg in  libpam-runtime; do \
+		install -m 0644 -D $(d)/$$pkg.lintian $(d)/$$pkg/usr/share/lintian/overrides/$$pkg || exit; \
+	done
+
 	dh_link -i
 	dh_fixperms -i
 	dh_installdeb -i
@@ -131,7 +135,7 @@ binary-arch: install
 	dh_installcron -a
 
 	dh_installchangelogs -a $(BUILD_TREE)/ChangeLog
-	for pkg in libpam0g libpam-modules libpam-runtime; do \
+	for pkg in libpam0g libpam-modules ; do \
 		install -m 0644 -D $(d)/$$pkg.lintian $(d)/$$pkg/usr/share/lintian/overrides/$$pkg || exit; \
 	done
 
