@@ -13,8 +13,9 @@ pam (1.0.1-10) UNRELEASED; urgency=low
 
   [ Sam Hartman ]
   * Remove conflicts information for transitions prior to woody release
+  * Fix lintian overrides for libpam-runtime
 
- -- Sam Hartman <hartmans@debian.org>  Sat, 30 May 2009 13:47:20 -0400
+ -- Sam Hartman <hartmans@debian.org>  Sat, 30 May 2009 14:24:20 -0400
 
 pam (1.0.1-9) unstable; urgency=low
 
